--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,9 +4,7 @@ on:
     workflow_dispatch:
     schedule:
         - cron: "30 12 * * *" # 30 minutes before Dependabot
-    
-permissions: write-all
-
+   
 jobs:
     bump:
         name: Bump dependencies
@@ -17,6 +15,7 @@ jobs:
               uses: actions/checkout@v3.1.0
               with:
                   ref: ${{ github.head_ref }}
+                  token: ${{ secrets.ACTIONS_TOKEN }}
 
             - name: Bump dependnencies
               uses: RedGuy12/sync-types@v1.0.3
