fix typo in lint workflow
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
               with:
                   ref: ${{ github.head_ref }}
 
-            - name: Bump dependnencies
+            - name: Bump dependencies
               uses: RedGuy12/sync-types@v1.0.3
 
             - name: Commit
