--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@discordjs/opus": "0.9.0",
 		"@discordjs/voice": "0.14.0",
 		"async-exit-hook": "2.0.1",
+		"canvas": "2.10.2",
 		"difflib": "0.2.4",
 		"discord.js": "14.7.1",
 		"dotenv": "16.0.3",
