devx: Run eslint --fix on the whole codebase
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
 		"baseUrl": ".",
 		"checkJs": true,
 		"esModuleInterop": true,
+		"exactOptionalPropertyTypes": false,
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
+		"importHelpers": true,
 		"importsNotUsedAsValues": "error",
 		"lib": ["ESNext", "DOM"],
 		"maxNodeModuleJsDepth": 0,
@@ -20,16 +22,14 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
+		"outDir": "dist",
+		"resolveJsonModule": true,
+		"skipLibCheck": false,
 		"strict": true,
 		"stripInternal": true,
 		"target": "ES2021",
 		"useDefineForClassFields": true,
-		"useUnknownInCatchVariables": true,
-		"importHelpers": true,
-		"outDir": "dist",
-		"skipLibCheck": false,
-		"resolveJsonModule": true,
-		"exactOptionalPropertyTypes": false
+		"useUnknownInCatchVariables": true
 	},
 	"exclude": ["node_modules", ".git", "dist"],
 	"include": ["./*", "./.*", "./**/*", "./.**/*"],
