--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
 		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
-		"lint": "cd node_modules/@redguy12/eslint-config/ && npx eslint ../../../ --resolve-plugins-relative-to . --fix",
+		"lint": "cd node_modules/@redguy12/eslint-config/ && npx eslint ../../../ --resolve-plugins-relative-to . --config ../../../.eslintrc.cjs --cache",
 		"serve": "nodemon . --watch dist",
 		"start": "node ."
 	},
