--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -56,4 +56,4 @@ body:
                     Guidelines](https://github.com/scratchaddons-community/scradd/blob/main/.github/CONTRIBUTING.md).
                 required: true
 
-              - label: I’m willing to submit a PR to add this (optional).
+              - label: I'm willing to submit a PR to add this (optional).
