--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
 	"name": "scradd",
-	"version": "2.4.0",
+	"version": "2.3.4",
 	"private": true,
+	"description": "Custom Discord bot for the Scratch Addons server.",
+	"homepage": "https://discord.gg/FPv957V6SD",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/scratchaddons-community/scradd"
+	},
+	"license": "MIT",
 	"type": "module",
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
 		"format": "prettier --write \"**\" \"!dist/**\" --ignore-unknown",
-		"lint": "cd node_modules/@redguy12/eslint-config/ && npx eslint ../../../commands --resolve-plugins-relative-to . --config ../../../.eslintrc.cjs",
 		"serve": "nodemon . --watch dist",
 		"start": "node ."
 	},
 	"prettier": "@redguy12/prettier-config",
 	"dependencies": {
 		"@discordjs/opus": "0.9.0",
-		"@discordjs/voice": "0.14.0",
-		"@napi-rs/canvas": "0.1.30",
+		"@discordjs/voice": "0.11.0",
 		"async-exit-hook": "2.0.1",
 		"difflib": "0.2.4",
-		"discord.js": "14.7.1",
+		"discord.js": "14.6.0",
 		"dotenv": "16.0.3",
 		"ffmpeg-static": "5.1.0",
 		"fuse.js": "6.6.2",
@@ -30,21 +35,21 @@
 	},
 	"devDependencies": {
 		"@railway/cli": "2.0.13",
-		"@redguy12/eslint-config": "file:../../configs/eslint-config",
 		"@redguy12/prettier-config": "2.0.2",
 		"@types/async-exit-hook": "<=2.0.1",
 		"@types/chrome": "latest",
-		"@types/eslint": "<=8.30.0",
 		"@types/json-diff": "<=0.9.1",
 		"@types/node": "<=18.12.1",
 		"@types/papaparse": "<=5.3.2",
-		"eslint": "8.30.0",
 		"nodemon": "2.0.20",
 		"prettier": "2.8.0",
-		"typescript": "4.9.4"
+		"typescript": "4.9.3"
 	},
 	"engines": {
 		"node": "18.12.1",
 		"npm": "8.13.2"
+	},
+	"overrides": {
+		"discord-api-types": "0.37.14"
 	}
 }
