--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -9,6 +9,6 @@ jobs:
         steps:
           - uses: tgymnich/fork-sync@v1.2.1
             with:
-                token: ${{ github.token }}
+                github_token: ${{ github.token }}
                 base: main
                 head: main
