--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,6 +3,9 @@ on:
     workflow_dispatch:
     schedule:
         - cron: 0 */1 * * *
+
+permissions: write-all
+
 jobs:
     sync:
         runs-on: ubuntu-latest
